# Content-Based-Image-Retrieval

./: READme.md.txt  ReadME.md  Readme.txt
P2_CBIR/: CMakeLists.txt
P2_CBIR/include/: dirent.h  distanceMetrics.h  features.h
P2_CBIR/src/: distanceMetrics.cpp  featureExtractor.cpp  features.cpp  imageRetriever.cpp
include/: distance_metric.h  feature.h
src/: csv_util.cpp  distance_metric.cpp  extract_feature.cpp  feature.cpp  readfiles.cpp
